Simpler setup (#1)
* Simplify API, base, and UI dockerfiles
* Remove unused script files